# technical-test01

./: Dockerfile  Insomnia  README.md  docker-compose.yml  pyproject.toml
instance/: settings.json
technical_test/: __init__.py  core.py  dao.py  errors.py  helpers.py  models.py  routes.py  tasks.py  worker.py
tests/: conftest.py  test_core.py  test_dao.py  test_flask.py  test_helpers.py
